# pyprint_env

./: README.md  pyproject.toml
cicd/: ci.yml  manual-deploy.yml  release.yml
docker/: Dockerfile  DockerfileBash  docker-entrypoint.sh
env_printer/: __init__.py  settings.py
