[tool.poetry]
name = "env_printer"
version = "0.1.0"
description = "Return Env Vars"
authors = ["Tom Dugan <thomas.dugan@adhocteam.us>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
black = "^19.10b0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
